--- a/package.json
+++ b/package.json
@@ -25,7 +25,11 @@
     "rewire": "^2.5.1",
     "rollup": "^0.31.2",
     "rollup-plugin-babel": "^2.5.1",
-    "babel-preset-es2015-rollup": "^1.1.1"
+    "babel-preset-es2015-rollup": "^1.1.1",
+    "babel-plugin-transform-runtime": "^6.0.0",
+    "babel-preset-stage-2": "^6.0.0",
+    "babel-preset-es2015": "^6.0.0",
+    "babel-core": "^6.0.0"
   },
   "bugs": {
     "url": "https://github.com/bhoriuchi/node-acl-backend-rethink/issues"
