--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "rewire": "^2.5.1",
     "rollup": "^0.31.2",
     "rollup-plugin-babel": "^2.5.1",
+    "babel-register": "^6.11.0",
+    "babel-runtime": "^6.9.0",
     "babel-preset-es2015-rollup": "^1.1.1",
     "babel-plugin-transform-runtime": "^6.0.0",
     "babel-preset-stage-2": "^6.0.0",
