--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
   "dependencies": {},
   "devDependencies": {
     "acl": "^0.4.0",
+    "bluebird": "^3.4.0",
     "chai": "^3.5.0",
     "lodash": "^4.13.0",
     "mocha": "^2.5.3",
     "rethinkdb": "^2.3.0",
-    "rethinkdbdash": "^2.3.6",
+    "rethinkdbdash": "^2.3.0",
     "rewire": "^2.5.1",
     "rollup": "^0.31.2",
     "rollup-plugin-babel": "^2.5.1",
