--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "scripts": {
     "buildexample": "npm run build && rollup example/example.js --output example/build.js --format cjs && node example/build.js --harmony",
-    "example": "rollup example/example.js --output example/build.js --format cjs && node example/build.js --harmony",
-    "build": "rollup -c build/rollup.config.js",
+    "example": "node example/example.js",
+    "build:copybrc": "cp build/.build.babelrc src/.babelrc",
+    "build:rmbrc": "rm -f src/.babelrc",
+    "build": "npm run build:copybrc && rollup -c build/rollup.config.js && npm run build:rmbrc",
     "test": "npm run build && mocha test/index.js"
   },
   "author": "Branden Horiuchi <bhoriuchi@gmail.com>",
