--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "acl-backend-rethinkdb",
-  "version": "0.2.0",
+  "version": "1.0.0",
   "description": "RethinkDB backend for acl",
   "license": "MIT",
   "main": "index.js",
@@ -14,7 +14,8 @@
     "build:copybrc": "cp build/.build.babelrc src/.babelrc",
     "build:rmbrc": "rm -f src/.babelrc",
     "build": "npm run build:copybrc && rollup -c build/rollup.config.js && npm run build:rmbrc",
-    "test": "npm run build && mocha test/index.js"
+    "mocha:test": "mocha test/index.js",
+    "test": "test/test.sh"
   },
   "author": "Branden Horiuchi <bhoriuchi@gmail.com>",
   "dependencies": {
@@ -32,6 +33,7 @@
     "bluebird": "^3.4.0",
     "chai": "^4.1.2",
     "mocha": "^2.5.3",
+    "ms": "^2.0.0",
     "rethinkdb": "^2.3.3",
     "rethinkdbdash": "^2.3.31",
     "rewire": "^2.5.1",
